--- a/examples/core/useSelect/public/index.html
+++ b/examples/core/useSelect/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>refine core useSelect example</title>
+  <title>refine core useSelect Website</title>
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 
