--- a/examples/tutorial/antd/public/index.html
+++ b/examples/tutorial/antd/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>refine antd tutorial example app</title>
+    <title>refine antd tutorial example</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
