chore: update title

--- a/examples/base/saas-ui/index.html
+++ b/examples/base/saas-ui/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/src/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>refine base chakra-ui example</title>
+        <title>refine base saas-ui example</title>
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap"
             rel="stylesheet"
