--- a/examples/blog-job-posting/public/index.html
+++ b/examples/blog-job-posting/public/index.html
@@ -5,11 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using refine" />
+    <meta
+      name="description"
+      content="Web site created using refine"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,10 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>
-      refine - A React-based framework for building data-intensive applications
-      in no time.
-    </title>
+    <title>refine base example</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
