--- a/examples/data-use-infinite-list/public/index.html
+++ b/examples/data-use-infinite-list/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>refine infinity list example</title>
+  <title>refine useInfiniteList hook example</title>
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 
