--- a/examples/blog-refine-airtable-crud/public/index.html
+++ b/examples/blog-refine-airtable-crud/public/index.html
@@ -19,6 +19,9 @@
       name="twitter:image"
       content="https://refine.dev/img/refine_social_new.png"
     />
+    <!--for codesandbox env-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!--for codesandbox env-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
